cluster/apps/media/apps/calibre-web-automated/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web-automated
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - cwa.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
            namespace: traefik
      backendRefs:
        - name: calibre-web-automated-calibre-web-automated
          port: 8083
